Add Emacs category

--- a/_posts/2015-02-06-bigemacs.md
+++ b/_posts/2015-02-06-bigemacs.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Bigemacs"
 date:   2015-02-06 10:00:00
-category: design
+category: emacs
 ---
 
 I'm slowly making the tranistion from Sublime to Emacs. Embracing Emacs has been a love-hate relationship. I'm certainly not proficient enough in it to use it for client work, but I'm slowly figuring things out. 
